# labeled-variants

./: Cargo.toml
labeled-variants/: Cargo.toml  README.md
labeled-variants-derive/: Cargo.toml  README.md
labeled-variants-derive/src/: lib.rs
labeled-variants-tests/: Cargo.toml
labeled-variants-tests/src/: main.rs
labeled-variants-tests/tests/: tests.rs
labeled-variants/src/: lib.rs
