[package]
name = "labeled-variants"
version = "0.1.0"
edition = "2018"

description = "Labels for enum variants"
authors = [ "Heiko Seeberger <mail@heikoseeberger.rocks>" ]
license-file = "../LICENSE"
readme = "README.md"
homepage = "https://github.com/hseeberger/labeled-variants"
repository = "https://github.com/hseeberger/labeled-variants"
documentation = "https://github.com/hseeberger/labeled-variants"

[dependencies]
labeled-variants-derive = { path = "../labeled-variants-derive", version = "0.1.0", optional = true }

[features]
derive = [ "labeled-variants-derive" ]
